<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/landingpagebg"
    tools:context=".LandingPage">

<!--    <ImageView-->
<!--        android:id="@+id/imageView"-->
<!--        android:layout_width="637dp"-->
<!--        android:layout_height="879dp"-->
<!--        app:srcCompat="@drawable/landingpagebg"-->
<!--        tools:ignore="MissingConstraints"-->
<!--        tools:layout_editor_absoluteX="-113dp"-->
<!--        tools:layout_editor_absoluteY="-74dp" />-->

    <EditText
        android:id="@+id/txtLogEmail"
        android:layout_width="334dp"
        android:layout_height="39dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edittextbackground"
        android:ems="10"
        android:fontFamily="@font/jost"
        android:hint="@string/email"
        android:inputType=""
        android:paddingLeft="5dp"
        android:textColor="@color/fontdark"
        android:textColorHighlight="@color/font1"
        android:textColorHint="@color/font1"
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.419"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />




    <EditText
        android:id="@+id/txtLogPassword"
        android:layout_width="331dp"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/edittextbackground"
        android:ems="10"
        android:fontFamily="@font/jost"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="5dp"
        android:textColor="@color/fontdark"
        android:textColorHighlight="@color/font1"
        android:textColorHint="@color/font1"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.412"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="74dp"
        android:layout_height="28dp"
        android:layout_marginTop="216dp"
        android:fontFamily="@font/jost_semi"
        android:text="@string/email"
        android:textColor="@color/fontdark"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.096"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="95dp"
        android:layout_height="27dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/jost_semi"
        android:text="@string/password"
        android:textColor="@color/fontdark"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.096"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLogEmail" />

    <ImageButton
        android:id="@+id/btnLogin"
        android:layout_width="170dp"
        android:layout_height="52dp"
        android:layout_marginTop="32dp"
        android:background="@null"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.828"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLogPassword"
        app:srcCompat="@drawable/login_button" />

    <Button
        android:id="@+id/btnForgot"
        android:layout_width="198dp"
        android:layout_height="36dp"
        android:layout_marginTop="4dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/jost_semi"
        android:text="@string/forgot"
        android:textAllCaps="false"
        android:textColor="@color/fontdark"
        android:textSize="13dp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.882"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    <ImageButton
        android:id="@+id/btnSignUp"
        android:layout_width="146dp"
        android:layout_height="45dp"
        android:layout_marginBottom="48dp"
        android:background="@null"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/signup_button" />

</androidx.constraintlayout.widget.ConstraintLayout>