<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:background="@drawable/signuppageeee"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<!--    <ImageView-->
<!--        android:id="@+id/imageView5"-->
<!--        android:layout_width="652dp"-->
<!--        android:layout_height="859dp"-->
<!--        app:srcCompat="@drawable/signuppagebg"-->
<!--        tools:ignore="MissingConstraints"-->
<!--        tools:layout_editor_absoluteX="-121dp"-->
<!--        tools:layout_editor_absoluteY="16dp" />-->

    <EditText
        android:id="@+id/txtConfirm"
        android:layout_width="312dp"
        android:layout_height="49dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/edittextbackground"
        android:ems="10"
        android:fontFamily="@font/jost"
        android:hint="@string/confirmpassword"
        android:inputType="textPassword"
        android:paddingLeft="5dp"
        android:textColor="@color/fontdark"
        android:textColorHint="@color/font1"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.424"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/jost_semi"
        android:text="@string/confirmpassword"
        android:textColor="@color/fontdark"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.167"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPassword" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="312dp"
        android:layout_height="49dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edittextbackground"
        android:ems="10"
        android:fontFamily="@font/jost"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="5dp"
        android:textColor="@color/fontdark"
        android:textColorHint="@color/font1"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.424"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="208dp"
        android:fontFamily="@font/jost_semi"
        android:text="@string/email"
        android:textColor="@color/fontdark"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.127"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="312dp"
        android:layout_height="49dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/edittextbackground"
        android:ems="10"
        android:fontFamily="@font/jost"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:paddingLeft="5dp"
        android:textColor="@color/fontdark"
        android:textColorHint="@color/font1"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.424"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/jost_semi"
        android:text="@string/password"
        android:textColor="@color/fontdark"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.127"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail" />

    <ImageButton
        android:id="@+id/btnSign"
        android:layout_width="138dp"
        android:layout_height="37dp"
        android:layout_marginTop="32dp"
        android:background="@null"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.791"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtConfirm"
        app:srcCompat="@drawable/signup_button"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="35dp"
        android:layout_height="33dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@null"
        android:scaleType="centerInside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="132dp"
        android:layout_marginEnd="56dp"
        android:fontFamily="@font/jost_semi"
        android:text="Sign - Up"
        android:textColor="@color/fontdark"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>